--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         <link rel="icon" href="./favicon.png">
 
+        <link href="./css/hamburgers.min.css" rel="stylesheet" type="text/css">
         <link href="./css/typeface.css" rel="stylesheet" type="text/css">
         <link href="./css/desktop.css" rel="stylesheet" type="text/css">
     </head>
@@ -48,6 +49,24 @@
                     4 | VIDEO/DIGITAL MEDIA
                 </div>
             </section>
+            
+            <div class="slide-menu hidden">
+                <nav>
+                    <li>test1</li>
+                    <li>test2</li>
+                </nav>
+            </div>
+
+            <div class="menu-button">
+                <button class="hamburger hamburger--spin is-activ" type="button">
+                    <span class="hamburger-box">
+                        <span class="hamburger-inner"></span>
+                    </span>
+                </button>
+            </div>
         </main>
+        
+        <script src="./js/jquery-3.2.1.min.js" type="text/javascript"></script>
+        <script src="./js/app.js" type="text/javascript"></script>
     </body>
 </html>
