--- a/index.html
+++ b/index.html
@@ -22,38 +22,46 @@
         <main class="wrapper">
             <section class="page-data" id="home">
                 <div class="section-title">
-                    0 | HELLO!
+                    <span>0 | HELLO!</span>
                 </div>
+                <br><br><br><br><br><br><br><br><br>
             </section>
 
             <section class="page-data" id="about">
                 <div class="section-title">
-                    1 | ABOUT
+                    <span>1 | ABOUT</span>
                 </div>
             </section>
 
             <section class="page-data" id="front-end">
                 <div class="section-title">
-                    2 | INTERACTIVE DESIGN
+                    <span>2 | INTERACTIVE DESIGN</span>
                 </div>
+                <br><br><br><br><br><br><br><br>
             </section>
 
             <section class="page-data" id="cs-projects">
                 <div class="section-title">
-                    3 | CODE
+                    <span>3 | CODE</span>
                 </div>
+                <br><br><br><br><br><br><br><br><br><br><br><br>
             </section>
 
             <section class="page-data" id="video">
                 <div class="section-title">
-                    4 | VIDEO/DIGITAL MEDIA
+                    <span>4 | VIDEO/DIGITAL MEDIA</span>
                 </div>
+                <br><br><br><br><br><br><br><br>
             </section>
             
             <div class="slide-menu hidden">
                 <nav>
-                    <li>test1</li>
-                    <li>test2</li>
+                    <span class="nav-title">MENU</span>
+                    <li>Hello!</li>
+                    <li>About</li>
+                    <li>Interactive Web Design</li>
+                    <li>Code</li>
+                    <li>Video/Digital Media</li>
                 </nav>
             </div>
 
