Testing hero design

--- a/index.html
+++ b/index.html
@@ -21,39 +21,37 @@
     <body>
         <main class="wrapper">
             <section class="page-data" id="home">
-                <div class="section-title">
-                    <span>0 | HELLO!</span>
+                <div class="section-title fixed">
+                    <span>0 <span>I</span> HELLO!</span>
                 </div>
-                <br><br><br><br><br><br><br><br><br>
+                a
+                <div id="test"></div>
             </section>
 
             <section class="page-data" id="about">
                 <div class="section-title">
-                    <span>1 | ABOUT</span>
+                    <span>1 <span>I</span> ABOUT</span>
                 </div>
             </section>
 
             <section class="page-data" id="front-end">
                 <div class="section-title">
-                    <span>2 | INTERACTIVE DESIGN</span>
+                    <span>2 <span>I</span> INTERACTIVE DESIGN</span>
                 </div>
-                <br><br><br><br><br><br><br><br>
             </section>
 
             <section class="page-data" id="cs-projects">
                 <div class="section-title">
-                    <span>3 | CODE</span>
+                    <span>3 <span>I</span> CODE</span>
                 </div>
-                <br><br><br><br><br><br><br><br><br><br><br><br>
             </section>
 
             <section class="page-data" id="video">
                 <div class="section-title">
-                    <span>4 | VIDEO/DIGITAL MEDIA</span>
+                    <span>4 <span>I</span> VIDEO/DIGITAL MEDIA</span>
                 </div>
-                <br><br><br><br><br><br><br><br>
             </section>
-            
+
             <div class="slide-menu hidden">
                 <nav>
                     <span class="nav-title">MENU</span>
@@ -66,15 +64,15 @@
             </div>
 
             <div class="menu-button">
-                <button class="hamburger hamburger--spin is-activ" type="button">
+                <button class="hamburger hamburger--spin" type="button">
                     <span class="hamburger-box">
                         <span class="hamburger-inner"></span>
                     </span>
                 </button>
             </div>
         </main>
-        
-        <script src="./js/jquery-3.2.1.min.js" type="text/javascript"></script>
-        <script src="./js/app.js" type="text/javascript"></script>
+
+        <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
+        <script src="js/app.js" type="text/javascript"></script>
     </body>
 </html>
