Add class for site title

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 
     <body>
         <main class="wrapper">
+            <div class="site-title">Lukas Romsicki</div>
+            
             <section class="page-data" id="home">
                 <div class="section-title fixed">
                     <span>0 <span>I</span> HELLO!</span>
                 </div>
-                a
+                Content
                 <div id="test"></div>
             </section>
 
