--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="A computer science student, interactive web front-end developer, and digital media specialist." />
+        <meta name="description" content="A computer science student, interactive front-end developer, and digital media specialist." />
 
         <meta name="robots" content="index, nofollow" />
 
@@ -13,6 +13,7 @@
 
         <link rel="icon" href="./favicon.png">
 
+        <link href="./vendor/fa/css/fontawesome-all.min.css" rel="stylesheet">
         <link href="./css/hamburgers.min.css" rel="stylesheet" type="text/css">
         <link href="./css/typeface.css" rel="stylesheet" type="text/css">
         <link href="./css/desktop.css" rel="stylesheet" type="text/css">
@@ -22,11 +23,23 @@
         <main class="wrapper">
             <div class="site-title">Lukas Romsicki</div>
             
+            <div class="social-icons">
+                <div id="github-icon">
+                    <i class="fab fa-github fa-2x"></i>
+                </div>
+                <div id="github-icon">
+                    <i class="fab fa-twitter fa-2x"></i>
+                </div>
+                <div id="github-icon">
+                    <i class="fab fa-youtube fa-2x"></i>
+                </div>
+            </div>
+
             <section class="page-data" id="home">
                 <div class="section-title fixed">
                     <span>0 <span>I</span> HELLO!</span>
                 </div>
-                Content
+                &nbsp;
                 <div id="test"></div>
             </section>
 
@@ -38,7 +51,7 @@
 
             <section class="page-data" id="front-end">
                 <div class="section-title">
-                    <span>2 <span>I</span> INTERACTIVE DESIGN</span>
+                    <span>2 <span>I</span> INTERACTIVE F.E. DESIGN</span>
                 </div>
             </section>
 
@@ -59,7 +72,7 @@
                     <span class="nav-title">MENU</span>
                     <li>Hello!</li>
                     <li>About</li>
-                    <li>Interactive Web Design</li>
+                    <li>Interactive Front End Design</li>
                     <li>Code</li>
                     <li>Video/Digital Media</li>
                 </nav>
