Convert to new page title, remove test content

--- a/index.html
+++ b/index.html
@@ -21,14 +21,17 @@
 
     <body>
         <main class="wrapper">
-            <div class="site-title">Lukas Romsicki</div>
+            <div class="site-title">
+                <span>Lukas Romsicki</span>
+            </div>
 
             <section class="page-data" id="home">
                 <div class="section-title fixed">
                     <span>0 <span>I</span> HELLO!</span>
                 </div>
-                &nbsp;
-                <div id="test"></div>
+                <div class="content">
+                    <h1>Hi.</h1>
+                </div>
             </section>
 
             <section class="page-data" id="about">
