Add homepage content

--- a/index.html
+++ b/index.html
@@ -31,6 +31,25 @@
                 </div>
                 <div class="content">
                     <h1>Hi.</h1>
+                    <div class="inner-content">
+                        <p>
+                            My name is Lukas.<br />
+                            I design friendly & tangible web/app experiences,<br />
+                            and produce fantastic digital content.
+                        </p>
+
+                        <div class="space"></div>
+                        <div class="col-2 fit-content v-align">
+                            <div>
+                                <p class="d-element nowrap green-emphasis">Have we met before?</p>
+                                <p class="d-element nowrap subtle">I think gradients are cool.</p>
+                            </div>
+
+                            <div>
+                                <button id="scroll-down" class="ui-button pink-red">Scroll Down</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
