Add background to home section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             </div>
 
             <section class="page-data" id="home">
+                &nbsp;
                 <div class="section-title fixed">
                     <span>0 <span>I</span> HELLO!</span>
                 </div>
