Add complete menu functionality

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
             <div class="slide-menu hidden">
                 <nav>
                     <span class="nav-title">MENU</span>
-                    <li>Hello!</li>
-                    <li>About</li>
-                    <li>Interactive Front End Design</li>
-                    <li>Code</li>
-                    <li>Video/Digital Media</li>
+                    <a data-scroll href="#home" class="active">Hello!</a>
+                    <a data-scroll href="#about">About</a>
+                    <a data-scroll href="#front-end">Interactive Front End Design</a>
+                    <a data-scroll href="#cs-projects">Code</a>
+                    <a data-scroll href="#video">Video/Digital Media</a>
                 </nav>
             </div>
 
