--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
 
     <body>
         <main class="wrapper">
-            <div class="site-title">
-                <span>Lukas Romsicki</span>
-            </div>
-
             <section class="page-data" id="home">
                 &nbsp;
                 <div class="section-title fixed">
                     <span>0 <span>I</span> HELLO!</span>
                 </div>
+
+                <div class="site-title">
+                    <span>Lukas Romsicki</span>
+                </div>
+
                 <div class="content">
-                    <h1>Hi.</h1>
+                    <h1 data-tilt class="js-tilt">Hi.</h1>
                     <div class="inner-content">
                         <p>
                             My name is Lukas.<br />
@@ -98,12 +99,17 @@
             </div>
         </main>
 
-        <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
-        <script src="vendor/smoothscroll/smooth-scroll.min.js"></script>
-        <script src="js/app.js" type="text/javascript"></script>
+        <script src="./js/jquery-3.2.1.min.js" type="text/javascript"></script>
+        <script src="./vendor/tilt/tilt.jquery.min.js" type="text/javascript"></script>
+        <script src="./vendor/smoothscroll/smooth-scroll.min.js"></script>
+        <script src="./js/app.js" type="text/javascript"></script>
 
         <script>
             var scroll = new SmoothScroll('a[href*="#"]');
+
+            $('.js-tilt').tilt({
+                maxTilt: 7
+            })
         </script>
     </body>
 </html>
