Add mobile support

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <link href="./css/hamburgers.min.css" rel="stylesheet" type="text/css">
         <link href="./css/typeface.css" rel="stylesheet" type="text/css">
         <link href="./css/desktop.css" rel="stylesheet" type="text/css">
+        <link href="./css/mobile.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
