Modify grid spacing

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
 
                 <div class="inner-content col-2 autowrap">
-                    <div class="col-content dark-back">
+                    <div class="col-content light-back">
                         
                     </div>
 
