--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="A computer science student, interactive front-end developer, and digital media specialist." />
+        <meta name="description" content="Computer science student, interactive front-end developer, and digital media specialist." />
 
         <meta name="robots" content="index, nofollow" />
 
@@ -18,6 +18,7 @@
         <link href="./css/typeface.css" rel="stylesheet" type="text/css">
         <link href="./css/desktop.css" rel="stylesheet" type="text/css">
         <link href="./css/mobile.css" rel="stylesheet" type="text/css">
+        <link href="./vendor/normalize/normalize.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
