Responsive about layout

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 
                         <div class="space big"></div>
 
-                        <div class="autowrap-small givemeroom" id="logo-container">
-                            <div><img src="./res/img/shopify.png" alt="Shopify - Logo"></div>
-                            <div><img src="./res/img/carleton.png" alt="Carleton - Logo"></div>
+                        <div class="row center-xs around-xs" id="logo-container">
+                            <div class="col-md"><img src="./res/img/shopify.png" alt="Shopify - Logo"></div>
+                            <div class="col-md"><img src="./res/img/carleton.png" alt="Carleton - Logo"></div>
                         </div>
 
                         <div class="space"></div>
