--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                         <div class="space big"></div>
 
                         <div class="row center-xs around-xs" id="logo-container">
-                            <div class="col-md"><img src="./res/img/shopify.png" alt="Shopify - Logo"></div>
-                            <div class="col-md"><img src="./res/img/carleton.png" alt="Carleton - Logo"></div>
+                            <div class="col-sm"><img src="./res/img/shopify.png" alt="Shopify - Logo"></div>
+                            <div class="col-sm"><img src="./res/img/carleton.png" alt="Carleton - Logo"></div>
                         </div>
 
                         <div class="space"></div>
