--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <main class="wrapper">
             <section class="full" id="home">
                 <div class="section-title fixed">
-                    <span><img src="./res/svg/logo.svg" style="width: 40px"><br /><br />L<br/></br />R</span>
+                    <span><img src="./res/svg/logo.svg" style="width: 40px"><br />L<br >R<br />17</span>
                 </div>
 
                 <div id="site-title">
