--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <body>
         <main class="wrapper">
             <div id="branding">
-                <span><img src="./res/svg/logo.svg" style="width: 35px"><br />LR<br />17</span>
+                <span><img src="./assets/svg/logo.svg" style="width: 35px"><br />LR<br />17</span>
             </div>
             
             <div id="dim"></div>
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="content">
-                    <h1 class="js-tilt hi">Hi.</h1>
+                    <h1 class="js-tilt" id="hi">Hi.</h1>
                     <p>
                         My name is Lukas.<br />
                         I design friendly & tangible web/app experiences,<br />
@@ -59,7 +59,7 @@
 
             <section id="about">
                 <div class="row">
-                    <div class="padding dark-back col-sm-6">
+                    <div class="padding dark-back col-sm-6" id="profile">
 
                     </div>
 
@@ -72,9 +72,9 @@
 
                         <div class="space big"></div>
 
-                        <div class="row around-xs middle-xs" id="logo-container">
-                            <div class="col-sm"><img src="./res/img/shopify.png" alt="Shopify - Logo"></div>
-                            <div class="col-sm"><img src="./res/img/carleton.png" alt="Carleton - Logo"></div>
+                        <div class="row around-xs middle-xs center-xs">
+                            <div class="col-sm"><img src="./assets/img/shopify.png" alt="Shopify - Logo"></div>
+                            <div class="col-sm"><img src="./assets/img/carleton.png" alt="Carleton - Logo"></div>
                         </div>
 
                         <hr />
@@ -88,23 +88,6 @@
 
             <section class="light-back" id="front-end">
                 <header class="black">Front End Design</header>
-                <div class="large-grid">
-                    <div class="box" style="background-image: url(./res/img/webdev/otowa.png)">
-                        <label>1</label>
-                    </div>
-
-                    <div class="box" style="background-image: url(./res/img/webdev/humanlib.png)">
-                        <label>2</label>
-                    </div>
-
-                    <div class="box" style="background-image: url(./res/img/webdev/tedx.png)">
-                        <label>3</label>
-                    </div>
-
-                    <div class="box" style="background-image: url(./res/img/webdev/cblibrary.png)">
-                        <label>4</label>
-                    </div>
-                </div>
             </section>
 
             <section class="page-data" id="cs-projects">
