Add some front-end content

--- a/index.html
+++ b/index.html
@@ -88,6 +88,27 @@
 
             <section class="light-back" id="front-end">
                 <header class="black">Front End Design</header>
+                <div class="row start-xs">
+                    <div class="col-xs fe-box">
+                        <div class="fe-desc">
+                            <b>Oto-Wa Taiko</b>
+                            <p class="dim">Japanese drumming group located in Ottawa, Ontario. Dynamic website built using AngularJS.</p>
+                            <p><a href="http://otowataiko.ca">Visit this Project</a></p>
+                        </div>
+                        <div class="fe-image" style="background-image: url(./assets/img/webdev/otowa.png)"></div>
+                    </div>
+                </div>
+                
+                <div class="row end-xs ">
+                    <div class="col-xs fe-box">
+                        <div class="fe-desc">
+                            <b>SWL & CB Human Library</b>
+                            <p class="dim">A local "human library" event.  This website houses the portfolios for all guests.</p>
+                            <p><a href="http://swlcbhumanlibrary.ca">Visit this Project</a></p>
+                        </div>
+                        <div class="fe-image" style="background-image: url(./assets/img/webdev/humanlib.png)"></div>
+                    </div>
+                </div>
             </section>
 
             <section class="page-data" id="cs-projects">
