Add small text class

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="col-xs fe-box">
                         <div class="fe-desc">
                             <b>Oto-Wa Taiko</b>
-                            <p class="dim">Japanese drumming group located in Ottawa, Ontario. Dynamic website built using AngularJS.</p>
+                            <p class="dim small">Japanese drumming group located in Ottawa, Ontario. Dynamic website built using AngularJS.</p>
                             <p><a href="http://otowataiko.ca">Visit this Project</a></p>
                         </div>
                         <div class="fe-image" style="background-image: url(./assets/img/webdev/otowa.png)"></div>
@@ -103,7 +103,7 @@
                     <div class="col-xs fe-box">
                         <div class="fe-desc">
                             <b>SWL & CB Human Library</b>
-                            <p class="dim">A local "human library" event.  This website houses the portfolios for all guests.</p>
+                            <p class="dim small">A local "human library" event.  This website hosts the portfolios for all guests.  Built using MDL framework.</p>
                             <p><a href="http://swlcbhumanlibrary.ca">Visit this Project</a></p>
                         </div>
                         <div class="fe-image" style="background-image: url(./assets/img/webdev/humanlib.png)"></div>
