Flip item 1 on web dev section

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 
                 <div class="space"></div>
 
-                <div class="row around-xs middle-xs reverse">
+                <div class="row around-xs middle-xs">
                     <div class="col-sm-5">
                         <img src="./assets/img/webdev/otowa.png" class="box">
                     </div>
