Add app design section & style

--- a/index.html
+++ b/index.html
@@ -173,10 +173,23 @@
                         <p><a href="http://romsicki.com">romsicki.com</a></p>
                     </div>
                 </div>
-
             </section>
 
-            <section class="page-data" id="cs-projects">
+            <section class="page-data light-back" id="app-dev">
+                <header class="black italic">Application <span class="red">Design</span></header>
+                
+                <div class="row middle-xs">
+                    <div class="col-sm-6">
+                        <img src="./assets/img/software/impulse_iphone.png" />
+                    </div>
+                    <div class="col-sm-5">
+                        <h1 class="blue xl">01</h1>
+                        <h1>Impulse</h1>
+                        <aside>2D Physics Game</aside>
+                        
+                        <p class="light">Impulse is a 2D physics game based on the popular iOS app, Flappy Bird, written in Swift 2.0. I was interested in trying my hand at making my own app and making it available on the Apple App Store. I decided to create a game based off one of the App Store’s best-selling games, called “Flappy Bird.” I wanted to give the original Flappy Bird concept a striking interface, user customizability, and settings that I would have wanted to see in the original app.</p>
+                    </div>
+                </div>
             </section>
 
             <section class="page-data" id="video">
@@ -187,9 +200,9 @@
                     <span class="nav-title">MENU</span>
                     <a data-scroll href="#home" class="active">Hello!</a>
                     <a data-scroll href="#about">About</a>
-                    <a data-scroll href="#front-end">Interactive Front End Design</a>
-                    <a data-scroll href="#cs-projects">Code</a>
-                    <a data-scroll href="#video">Video/Digital Media</a>
+                    <a data-scroll href="#front-end">Front End Design</a>
+                    <a data-scroll href="#cs-projects">Application Design</a>
+                    <a data-scroll href="#video">Cine/Digital Media</a>
                 </nav>
             </div>
 
