Correct anchor link updating

--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
                     <a data-scroll href="#home" class="active">Hello!</a>
                     <a data-scroll href="#about">About</a>
                     <a data-scroll href="#front-end">Front End Design</a>
-                    <a data-scroll href="#cs-projects">Application Design</a>
-                    <a data-scroll href="#video">Cine/Digital Media</a>
+                    <a data-scroll href="#app-dev">Application Design</a>
+                    <a data-scroll href="#cine">Cine/Digital Media</a>
                 </nav>
             </div>
 
