Add additional content in cine section

--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@
                         <aside>2D Physics Game</aside>
 
                         <p class="light">Impulse is a 2D physics game based on the popular iOS app, Flappy Bird, written in Swift 2.0. I was interested in trying my hand at making my own app and making it available on the Apple App Store. I decided to create a game based off one of the App Store’s best-selling games, called “Flappy Bird.” I wanted to give the original Flappy Bird concept a striking interface, user customizability, and settings that I would have wanted to see in the original app.</p>
+
+                        <p class="small">Source tree available on <a href="https://github.com/lfroms/impulse">GitHub</a>.</p>
                     </div>
                 </div>
             </section>
@@ -198,6 +200,122 @@
                 <div class="space"></div>
 
                 <div class="row center-xs middle-xs">
+                    <div class="col-md-6 col-video">
+                        <div class="intrinsic-container intrinsic-container-16x9">
+                            <iframe src="https://www.youtube.com/embed/5y1vGwhHW2s?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5 c-desc-left">
+                        <img class="c-title" src="./assets/img/cine/legacy.png" />
+
+                        <p>
+                            <b>Role:</b> Director, Cinematographer, Editor <br />
+                            <b>Running Time:</b> 34:05 <br />
+                            <b>Resolution:</b> 1080p
+                        </p>
+
+                        <p class="light"><span class="regular italic">Synopsis:</span><br />
+                            After hearing that their beloved high school is scheduled to be demolished next year due to an alleged environmental situation, student council co-presidents Francis and Daniel see the Mayor of Ottawa for an explanation.  Shocked after learning that the report must be fake, they travel around the city finding clues leading them to the man responsible...</p>
+                    </div>
+                </div>
+
+                <div class="space"></div>
+
+                <div class="row center-xs middle-xs reverse">
+                    <div class="col-md-6 col-video">
+                        <div class="intrinsic-container intrinsic-container-16x9">
+                            <iframe src="https://www.youtube.com/embed/hxqbvII832o?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5 c-desc-right">
+                        <img class="c-title-large" src="./assets/img/cine/cccarol.png" />
+
+                        <p>
+                            <b>Role:</b> Director, Cinematographer, Editor <br />
+                            <b>Running Time:</b> 15:01 <br />
+                            <b>Resolution:</b> 1080p
+                        </p>
+
+                        <p class="light"><span class="regular italic">Synopsis:</span><br />
+                            It's Christmas time, and ultra-popular high school superstar Daniel has it all.  But after learning that someone has sabotaged his entire future, university admissions, and scholarships, he begins to hate the holiday season, lashing out at everyone around him for revenge.  After a nasty fall outside, three ghosts attempt to revive his Christmas spirit...
+                        </p>
+                    </div>
+                </div>
+
+                <header class="white italic">Television</header>
+
+                <div class="space"></div>
+
+                <div class="row center-xs middle-xs">
+                    <div class="col-md-5 col-video">
+                        <div class="intrinsic-container intrinsic-container-16x9">
+                            <iframe src="https://www.youtube.com/embed/videoseries?list=PL0WeV-SHK4yxQEysjYEv446ZGolrs4FLz&color=white" frameborder="0" allowfullscreen></iframe>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5 c-desc-left">
+                        <img class="c-title-large" src="./assets/img/cine/cv-logo.png" />
+
+                        <p>
+                            <b>Role:</b> Editor, Cinematographer, Presenter<br />
+                            <b>Avg. Running Time:</b> 7:00 <br />
+                            <b>Resolution:</b> 1080p
+                        </p>
+
+                        <p class="light"><span class="regular italic">About CougarVision:</span><br />
+                            CougarVision is Colonel By Secondary School's internat television network, bringing students 6-10 minute daily episodes featuring announcements, shorts, and event coverage.  It is entirely student-run.
+                        </p>
+                    </div>
+                </div>
+
+                <header class="white italic">Personal / Experimental</header>
+
+                <div class="space"></div>
+
+                <div class="row center-xs middle-xs reverse">
+                    <div class="col-md-5 col-video">
+                        <div class="intrinsic-container intrinsic-container-16x9">
+                            <iframe src="https://www.youtube.com/embed/VS-Ow2dZzIE?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5 c-desc-right">
+                        <h1>POLSKA 2015</h1>
+
+                        <p>
+                            <b>Avg. Running Time:</b> 8:04 <br />
+                            <b>Resolution:</b> 1080p
+                        </p>
+
+                        <p class="light"><span class="regular italic">About:</span><br />
+                            Compilation of different clips shot during a trip to Poland in 2015.  Heavily inspired by videos from TheUwagaPies on YouTube from around the same time.  Shot on a Panasonic DMC-GX7 with numerous lenses.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="space"></div>
+
+                <div class="row center-xs middle-xs">
+                    <div class="col-md-5 col-video">
+                        <div class="intrinsic-container intrinsic-container-16x9">
+                            <iframe src="https://www.youtube.com/embed/5P7nmuWtpoI?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5 c-desc-left">
+                        <h1>TORONTO FROM THE 24TH FLOOR</h1>
+
+                        <p>
+                            <b>Avg. Running Time:</b> 0:19 <br />
+                            <b>Resolution:</b> 1080p
+                        </p>
+
+                        <p class="light"><span class="regular italic">About:</span><br />
+                            Compilation of different clips shot during a trip to Poland in 2015.  Heavily inspired by videos from TheUwagaPies on YouTube from around the same time.  Shot on a Panasonic DMC-GX7 with numerous lenses.
+                        </p>
+                    </div>
                 </div>
             </section>
 
@@ -222,6 +340,7 @@
         </main>
 
         <script src="./js/jquery-3.2.1.min.js" type="text/javascript"></script>
+        <script src="./js/jquery.fitvids.js" type="text/javascript"></script>
         <script src="./vendor/prefixfree/prefixfree.min.js" type="text/javascript"></script>
         <script src="./vendor/tilt/tilt.jquery.min.js" type="text/javascript"></script>
         <script src="./vendor/smoothscroll/smooth-scroll.min.js"></script>
@@ -238,6 +357,8 @@
                 $('.box').tilt({
                     maxTilt: 2
                 });
+
+                $(".").fitVids();
             });
         </script>
     </body>
