Complete cine section

--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@
                 <div class="space"></div>
 
                 <div class="row center-xs middle-xs">
-                    <div class="col-md-6 col-video">
+                    <div class="col-sm-6 col-video">
                         <div class="intrinsic-container intrinsic-container-16x9">
                             <iframe src="https://www.youtube.com/embed/5y1vGwhHW2s?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
 
-                    <div class="col-md-5 c-desc-left">
+                    <div class="col-sm-5 c-desc-left">
                         <img class="c-title" src="./assets/img/cine/legacy.png" />
 
                         <p>
@@ -223,13 +223,13 @@
                 <div class="space"></div>
 
                 <div class="row center-xs middle-xs reverse">
-                    <div class="col-md-6 col-video">
+                    <div class="col-sm-6 col-video">
                         <div class="intrinsic-container intrinsic-container-16x9">
                             <iframe src="https://www.youtube.com/embed/hxqbvII832o?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
 
-                    <div class="col-md-5 c-desc-right">
+                    <div class="col-sm-5 c-desc-right">
                         <img class="c-title-large" src="./assets/img/cine/cccarol.png" />
 
                         <p>
@@ -249,13 +249,39 @@
                 <div class="space"></div>
 
                 <div class="row center-xs middle-xs">
-                    <div class="col-md-5 col-video">
+                    <div class="col-sm-5 col-video">
+                        <div class="intrinsic-container intrinsic-container-16x9">
+                            <iframe src="https://www.youtube.com/embed/videoseries?list=PL0WeV-SHK4yy2dkSG8xCWxl5mo5gfKhLw&color=white" frameborder="0" allowfullscreen></iframe>
+                        </div>
+                        <p class="light small smallspace">Youtube Playlist</p>
+                    </div>
+
+                    <div class="col-sm-5 c-desc-left">
+                        <img class="c-title" src="./assets/img/cine/hsh.png" />
+
+                        <p>
+                            <b>Role:</b> Editor, Cinematographer <span class="light italic">(Co-Host)</span><br />
+                            <b>Avg. Running Time:</b> 15:00 per segment <br />
+                            <b>Resolution:</b> 1080i
+                        </p>
+
+                        <p class="light"><span class="regular italic">About the show:</span><br />
+                            <span class="regular">High School Happenings</span> is a monthly television programme on Rogers Television that features unique educational programs from a variety of high schools across Ottawa.  
+                        </p>
+                    </div>
+                </div>
+
+                <div class="space"></div>
+
+                <div class="row center-xs middle-xs reverse">
+                    <div class="col-sm-5 col-video">
                         <div class="intrinsic-container intrinsic-container-16x9">
                             <iframe src="https://www.youtube.com/embed/videoseries?list=PL0WeV-SHK4yxQEysjYEv446ZGolrs4FLz&color=white" frameborder="0" allowfullscreen></iframe>
                         </div>
+                        <p class="light small smallspace">Youtube Playlist</p>
                     </div>
 
-                    <div class="col-md-5 c-desc-left">
+                    <div class="col-sm-5 c-desc-right">
                         <img class="c-title-large" src="./assets/img/cine/cv-logo.png" />
 
                         <p>
@@ -275,17 +301,17 @@
                 <div class="space"></div>
 
                 <div class="row center-xs middle-xs reverse">
-                    <div class="col-md-5 col-video">
+                    <div class="col-sm-5 col-video">
                         <div class="intrinsic-container intrinsic-container-16x9">
                             <iframe src="https://www.youtube.com/embed/VS-Ow2dZzIE?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
 
-                    <div class="col-md-5 c-desc-right">
+                    <div class="col-sm-5 c-desc-right">
                         <h1>POLSKA 2015</h1>
 
                         <p>
-                            <b>Avg. Running Time:</b> 8:04 <br />
+                            <b>Running Time:</b> 8:04 <br />
                             <b>Resolution:</b> 1080p
                         </p>
 
@@ -298,22 +324,45 @@
                 <div class="space"></div>
 
                 <div class="row center-xs middle-xs">
-                    <div class="col-md-5 col-video">
+                    <div class="col-sm-5 col-video">
                         <div class="intrinsic-container intrinsic-container-16x9">
                             <iframe src="https://www.youtube.com/embed/5P7nmuWtpoI?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
 
-                    <div class="col-md-5 c-desc-left">
+                    <div class="col-sm-5 c-desc-left">
                         <h1>TORONTO FROM THE 24TH FLOOR</h1>
 
                         <p>
-                            <b>Avg. Running Time:</b> 0:19 <br />
+                            <b>Running Time:</b> 0:19 <br />
+                            <b>Resolution:</b> 4K
+                        </p>
+
+                        <p class="light"><span class="regular italic">About:</span><br />
+                            A short timelapse from the 24th floor through a hotel window.  Created using still images with long exposures, played in sequence at a higher frame rate.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="space"></div>
+
+                <div class="row center-xs middle-xs reverse">
+                    <div class="col-sm-5 col-video">
+                        <div class="intrinsic-container intrinsic-container-16x9">
+                            <iframe src="https://www.youtube.com/embed/v_U1Z82OfjI?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-5 c-desc-right">
+                        <h1>RAINY DAY</h1>
+
+                        <p>
+                            <b>Running Time:</b> 3:31 <br />
                             <b>Resolution:</b> 1080p
                         </p>
 
                         <p class="light"><span class="regular italic">About:</span><br />
-                            Compilation of different clips shot during a trip to Poland in 2015.  Heavily inspired by videos from TheUwagaPies on YouTube from around the same time.  Shot on a Panasonic DMC-GX7 with numerous lenses.
+                            Shot using the Canon HV20 MiniDV camcorder at 50% zoom at PF24, on a rather rainy day, to the tune of "La Vie en Rose" performed by Louis Armstrong.
                         </p>
                     </div>
                 </div>
